# physics-engine

./: CMakeLists.txt  README.md  ROADMAP.md  barnes_hut.py  barnes_hut_benchmark.py  visualize_realtime.py
docs/: barnes_hut_notes.md
src/: main.cpp  test
src/core/: RigidBody.cpp  RigidBody.h  Vec2.cpp  Vec2.h
